--- a/dst/about/index.html
+++ b/dst/about/index.html
@@ -11,7 +11,7 @@
 
     <meta property="og:locale" content="en_US">
 	<meta property="og:type" content="website">
-	<meta property="og:site_name" content="Flatirons Recovery Centers">
+	<meta property="og:site_name" content="Flatirons Recovery">
 	<meta property="og:title" content="About Our Addiction Treatment Center | Flatirons Recovery">
 	<meta property="og:description" content="Our addiction treatment program provides clients the opportunity to begin their healing process from substance use/dual-diagnosis disorders on 30, 60, and 90-day tracks. Learn more about us!">
 	<meta property="og:image" content="/about/wooden-fence.jpg" />
@@ -152,8 +152,8 @@
 <div class="wrap">
     <h2>Our Mission</h2>
     <p>The mission of Flatirons Recovery is to walk alongside our clients through the process of healing from addiction with greater clarity of purpose, connection to community, and ability to take right action in their lives. </p>
-    <p>What differentiates Flatirons Recovery Center from other treatment providers is our mindfulness-influenced curriculum, commitment to small group sizes, and belief that all our clients are innately good, and must be treated as such. Our highly skilled, compassionate clinical staff provide outstanding care that meets clients as they are, in order to guide them through the process of healing from a wide range of substance use, and mental health disorders.</p>
-    <p>Flatirons Recovery Center provides clients the opportunity to begin their healing process from substance use/dual-diagnosis disorders on 30-, 60-, and 90-day tracks. We provide a sober living residence for clients to live in a supportive, structured, healthy environment while taking part in our Day Treatment, and Intensive Outpatient (IOP) programs. Over the course of their time with Flatirons Recovery Center, clients can expect to be introduced to new many new skills to develop their personal foundation for recovery, including: Mindfulness Skills, Pro-Recovery Diet, biofeedback, EMDR trauma therapy, Dialectical Behavioral Therapy, Relapse Prevention Skills, and introduction to community based recovery programs such as SMART Recovery and 12 Step/AA.</p>
+    <p>What differentiates Flatirons Recovery from other treatment providers is our mindfulness-influenced curriculum, commitment to small group sizes, and belief that all our clients are innately good, and must be treated as such. Our highly skilled, compassionate clinical staff provide outstanding care that meets clients as they are, in order to guide them through the process of healing from a wide range of substance use, and mental health disorders.</p>
+    <p>Flatirons Recovery provides clients the opportunity to begin their healing process from substance use/dual-diagnosis disorders on 30-, 60-, and 90-day tracks. We provide a sober living residence for clients to live in a supportive, structured, healthy environment while taking part in our Day Treatment, and Intensive Outpatient (IOP) programs. Over the course of their time with Flatirons Recovery, clients can expect to be introduced to new many new skills to develop their personal foundation for recovery, including: Mindfulness Skills, Pro-Recovery Diet, biofeedback, EMDR trauma therapy, Dialectical Behavioral Therapy, Relapse Prevention Skills, and introduction to community based recovery programs such as SMART Recovery and 12 Step/AA.</p>
 </div>
 
 <div class="wrap">
@@ -176,7 +176,7 @@
     </div>
     <div class="row center-xs">
         <div class="col-xs">
-            <h4>If you would like to reach out to a treatment professional at Flatirons Recovery Center</h4>
+            <h4>If you would like to reach out to a treatment professional at Flatirons Recovery</h4>
             <h4>call us at <a href="tel:303-578-4536" data-track="click: phone, click">303-578-4536</a></h4>
             <a class="button border" href="/contact">Contact Us</a>
         </div>
@@ -289,21 +289,14 @@
 				<a href="mailto:contact@flatironsrecovery.com" data-track="click: email, click">contact@flatironsrecovery.com</a>
 			</div>
 		</div>
-		<!-- <div class="row center-xs">
-            <div class="col-xs-12 col-sm-4">
-                <a href="#l" target="_blank" rel="noopener">
-                    <img src="" alt="LegitScript">
-                </a>
-            </div>
-		</div> -->
-        <br>
-        <br>
-        <div class="row center-xs middle-xs">
-			<div class="col-xs-4">
+        <div class="row center-xs bottom-xs">
+			<div class="col-xs-4 first-sm">
 				<a href="/">&copy; Flatirons Recovery</a>
 			</div>
-			<div class="col-xs-4">
-                <!-- <object width="150px" type="image/svg+xml" data="">Flatirons Recovery Logo</object> -->
+			<div class="col-xs-12 col-sm-4 first-xs">
+                <div class="legit">
+                    <script src="https://static.legitscript.com/seals/7418467.js"></script>
+                </div>
 			</div>
 			<div class="col-xs-4">
 				<a href="https://arcdev.io/" rel="noopener">Arc i/o</a>
