--- a/dst/facility/index.html
+++ b/dst/facility/index.html
@@ -11,7 +11,7 @@
 
     <meta property="og:locale" content="en_US">
 	<meta property="og:type" content="website">
-	<meta property="og:site_name" content="Flatirons Recovery Centers">
+	<meta property="og:site_name" content="Flatirons Recovery">
 	<meta property="og:title" content="Treatment Facility Tour | Flatirons Recovery">
 	<meta property="og:description" content="See photos of our treatment facility and take a virtual tour.">
 	<meta property="og:image" content="/about/wooden-fence.jpg" />
@@ -164,6 +164,8 @@
 
 <div class="wrap">
     <div class="gallery row">
+        <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/facility/images/IMG_0309_v1.JPG" alt=""></div>
+        <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/facility/images/IMG_0314_v1.JPG" alt=""></div>
         <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/facility/images/IMG_0299_v1.JPG" alt=""></div>
         <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/facility/images/IMG_0300_v1.JPG" alt=""></div>
         <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/facility/images/IMG_0301_v1.JPG" alt=""></div>
@@ -171,8 +173,6 @@
         <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/facility/images/IMG_0303_v1.JPG" alt=""></div>
         <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/facility/images/IMG_0304_v1.JPG" alt=""></div>
         <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/facility/images/IMG_0305_v1.JPG" alt=""></div>
-        <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/facility/images/IMG_0309_v1.JPG" alt=""></div>
-        <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/facility/images/IMG_0314_v1.JPG" alt=""></div>
     </div>
 </div>
 
@@ -285,21 +285,14 @@
 				<a href="mailto:contact@flatironsrecovery.com" data-track="click: email, click">contact@flatironsrecovery.com</a>
 			</div>
 		</div>
-		<!-- <div class="row center-xs">
-            <div class="col-xs-12 col-sm-4">
-                <a href="#l" target="_blank" rel="noopener">
-                    <img src="" alt="LegitScript">
-                </a>
-            </div>
-		</div> -->
-        <br>
-        <br>
-        <div class="row center-xs middle-xs">
-			<div class="col-xs-4">
+        <div class="row center-xs bottom-xs">
+			<div class="col-xs-4 first-sm">
 				<a href="/">&copy; Flatirons Recovery</a>
 			</div>
-			<div class="col-xs-4">
-                <!-- <object width="150px" type="image/svg+xml" data="">Flatirons Recovery Logo</object> -->
+			<div class="col-xs-12 col-sm-4 first-xs">
+                <div class="legit">
+                    <script src="https://static.legitscript.com/seals/7418467.js"></script>
+                </div>
 			</div>
 			<div class="col-xs-4">
 				<a href="https://arcdev.io/" rel="noopener">Arc i/o</a>
