--- a/dst/mental-health/index.html
+++ b/dst/mental-health/index.html
@@ -11,7 +11,7 @@
 
     <meta property="og:locale" content="en_US">
 	<meta property="og:type" content="website">
-	<meta property="og:site_name" content="Flatirons Recovery Centers">
+	<meta property="og:site_name" content="Flatirons Recovery">
 	<meta property="og:title" content="Mental Health Treatment | Flatirons Recovery">
 	<meta property="og:description" content="Mental health and dual diagnosis in treatment at Flatirons Recovery. Learn more about dual-diagnosis treatment.">
 	<meta property="og:image" content="/mental-health/hills-sunset.jpg" />
@@ -151,8 +151,8 @@
     <p>Dual-diagnosis treatment refers to an individual who meets DSM-V diagnostic criteria for both a substance use disorder, as well as a mental health disorder. These are also referred to as co-occurring disorders.</p>
     <p>According to the National Alliance on Mental Illness (NAMI), approximately  19.3% of U.S. adults with mental illness also experienced a substance use disorder in 2018, equating to 9.2 million individuals.</p>
     <p>Often when people are using substances, the symptoms that they exhibit mimic those of mental health disorders. For example, a person using cocaine or methamphetamine excessively may begin to hallucinate, or to behave in ways that are very similar to someone experiencing a manic episode (not sleeping, grandiose or impulsive behavior).</p>
-    <p>For this reason, it is important for anyone engaging in treatment at Flatirons Recovery Center to achieve a period sobriety, in order to more accurately determine and assess the nature of any mental health symptoms they may be experiencing.</p>
-    <p>If it is determined though clinical assessment after a period of sobriety that a client is suffering from both a substance use disorder, as well as a mental health disorder, both conditions will be treated concurrently by Flatirons Recovery Center’s skilled therapeutic and medical teams.</p>
+    <p>For this reason, it is important for anyone engaging in treatment at Flatirons Recovery to achieve a period sobriety, in order to more accurately determine and assess the nature of any mental health symptoms they may be experiencing.</p>
+    <p>If it is determined though clinical assessment after a period of sobriety that a client is suffering from both a substance use disorder, as well as a mental health disorder, both conditions will be treated concurrently by Flatirons Recovery skilled therapeutic and medical teams.</p>
 </div>
 
 <div class="green">
@@ -163,7 +163,7 @@
     </div>
     <div class="row center-xs">
         <div class="col-xs">
-            <h4>If you would like to reach out to a treatment professional at Flatirons Recovery Center</h4>
+            <h4>If you would like to reach out to a treatment professional at Flatirons Recovery</h4>
             <h4>call us at <a href="tel:303-578-4536" data-track="click: phone, click">303-578-4536</a></h4>
             <a class="button border" href="/contact">Contact Us</a>
         </div>
@@ -299,21 +299,14 @@
 				<a href="mailto:contact@flatironsrecovery.com" data-track="click: email, click">contact@flatironsrecovery.com</a>
 			</div>
 		</div>
-		<!-- <div class="row center-xs">
-            <div class="col-xs-12 col-sm-4">
-                <a href="#l" target="_blank" rel="noopener">
-                    <img src="" alt="LegitScript">
-                </a>
-            </div>
-		</div> -->
-        <br>
-        <br>
-        <div class="row center-xs middle-xs">
-			<div class="col-xs-4">
+        <div class="row center-xs bottom-xs">
+			<div class="col-xs-4 first-sm">
 				<a href="/">&copy; Flatirons Recovery</a>
 			</div>
-			<div class="col-xs-4">
-                <!-- <object width="150px" type="image/svg+xml" data="">Flatirons Recovery Logo</object> -->
+			<div class="col-xs-12 col-sm-4 first-xs">
+                <div class="legit">
+                    <script src="https://static.legitscript.com/seals/7418467.js"></script>
+                </div>
 			</div>
 			<div class="col-xs-4">
 				<a href="https://arcdev.io/" rel="noopener">Arc i/o</a>
