--- a/dst/treatment/iop/index.html
+++ b/dst/treatment/iop/index.html
@@ -6,14 +6,14 @@
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="At Flatirons Recovery Center, our IOP program meets Monday, Wednesday, and Thursday evenings from 9am - 12pm for group therapy. Learn about our treatment program.">
+    <meta name="description" content="At Flatirons Recovery, our IOP program meets Monday, Wednesday, and Thursday evenings from 9am - 12pm for group therapy. Learn about our treatment program.">
     <meta name="keywords" content="intensive outpatient, iop program, treatment program">
 
     <meta property="og:locale" content="en_US">
 	<meta property="og:type" content="website">
-	<meta property="og:site_name" content="Flatirons Recovery Centers">
+	<meta property="og:site_name" content="Flatirons Recovery">
 	<meta property="og:title" content="Intensive Outpatient (IOP) | Flatirons Recovery">
-	<meta property="og:description" content="At Flatirons Recovery Center, our IOP program meets Monday, Wednesday, and Thursday evenings from 9am - 12pm for group therapy. Learn about our treatment program.">
+	<meta property="og:description" content="At Flatirons Recovery, our IOP program meets Monday, Wednesday, and Thursday evenings from 9am - 12pm for group therapy. Learn about our treatment program.">
 	<meta property="og:image" content="/treatment/blue-brook.jpg" />
 
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
@@ -148,7 +148,7 @@
 <div class="wrap">
     <div class="row">
         <div class="col-xs">
-            <p>At Flatirons Recovery Center, our IOP program meets Monday, Wednesday, and Thursday evenings from 9am - 12pm for group therapy.</p>
+            <p>At Flatirons Recovery, our IOP program meets Monday, Wednesday, and Thursday evenings from 9am - 12pm for group therapy.</p>
             <p>Group topics addressed in IOP include, but are not limited to:</p>
             <ul>
                 <li>CBT/DBT skills for relapse prevention</li>
@@ -172,7 +172,7 @@
     </div>
     <div class="row center-xs">
         <div class="col-xs">
-            <h4>If you would like to reach out to a treatment professional at Flatirons Recovery Center</h4>
+            <h4>If you would like to reach out to a treatment professional at Flatirons Recovery</h4>
             <h4>call us at <a href="tel:303-578-4536" data-track="click: phone, click">303-578-4536</a></h4>
             <a class="button border" href="/contact">Contact Us</a>
         </div>
@@ -284,21 +284,14 @@
 				<a href="mailto:contact@flatironsrecovery.com" data-track="click: email, click">contact@flatironsrecovery.com</a>
 			</div>
 		</div>
-		<!-- <div class="row center-xs">
-            <div class="col-xs-12 col-sm-4">
-                <a href="#l" target="_blank" rel="noopener">
-                    <img src="" alt="LegitScript">
-                </a>
-            </div>
-		</div> -->
-        <br>
-        <br>
-        <div class="row center-xs middle-xs">
-			<div class="col-xs-4">
+        <div class="row center-xs bottom-xs">
+			<div class="col-xs-4 first-sm">
 				<a href="/">&copy; Flatirons Recovery</a>
 			</div>
-			<div class="col-xs-4">
-                <!-- <object width="150px" type="image/svg+xml" data="">Flatirons Recovery Logo</object> -->
+			<div class="col-xs-12 col-sm-4 first-xs">
+                <div class="legit">
+                    <script src="https://static.legitscript.com/seals/7418467.js"></script>
+                </div>
 			</div>
 			<div class="col-xs-4">
 				<a href="https://arcdev.io/" rel="noopener">Arc i/o</a>
