--- a/dst/treatment/php/index.html
+++ b/dst/treatment/php/index.html
@@ -11,7 +11,7 @@
 
     <meta property="og:locale" content="en_US">
 	<meta property="og:type" content="website">
-	<meta property="og:site_name" content="Flatirons Recovery Centers">
+	<meta property="og:site_name" content="Flatirons Recovery">
 	<meta property="og:title" content="Day Treatment (PHP) | Flatirons Recovery">
 	<meta property="og:description" content="Addiction treatment at Flatirons Recovery typically begins in our Day Treatment, or PHP program. Learn More.">
 	<meta property="og:image" content="/treatment/blue-brook.jpg" />
@@ -159,7 +159,7 @@
                 <li>Community-based recovery models such as Smart Recovery and AA/12-Step.</li>
                 <li>Experiential programing including art therapy, equine therapy, hiking, and rock climbing.</li>
             </ul>
-            <p>Clients may participate in Day Treatment while living at home, though it is recommended that clients live in our staffed sober living house for the full duration of their Day Treatment program. For more information about Flatirons Recovery Center’s sober living, please <a href="/sober-living">click here</a>.</p>
+            <p>Clients may participate in Day Treatment while living at home, though it is recommended that clients live in our staffed sober living house for the full duration of their Day Treatment program. For more information about Flatirons Recovery sober living, please <a href="/sober-living">click here</a>.</p>
             <p>During Day Treatment, clients will also meet with a therapist for 1-hour of individual therapy per week, participate in family therapy on an as needed basis, as well as meet regularly with our Medical Director for any medication and/or physical health needs. Individual therapy may include biofeedback, art therapy, and trauma therapy such as EMDR, when indicated.</p>
             <p>Day Treatment at Flatirons Recovery lasts anywhere from 4 to 12 weeks to meet the individual treatment needs of different clients.</p>
             <p>Often, clients transition from Day Treatment to our IOP for 4-12 weeks in order to continue receiving recovery support, structure, and accountability, while re-engaging in work and/or independent living.</p>
@@ -175,7 +175,7 @@
     </div>
     <div class="row center-xs">
         <div class="col-xs">
-            <h4>If you would like to reach out to a treatment professional at Flatirons Recovery Center</h4>
+            <h4>If you would like to reach out to a treatment professional at Flatirons Recovery</h4>
             <h4>call us at <a href="tel:303-578-4536" data-track="click: phone, click">303-578-4536</a></h4>
             <a class="button border" href="/contact">Contact Us</a>
         </div>
@@ -287,21 +287,14 @@
 				<a href="mailto:contact@flatironsrecovery.com" data-track="click: email, click">contact@flatironsrecovery.com</a>
 			</div>
 		</div>
-		<!-- <div class="row center-xs">
-            <div class="col-xs-12 col-sm-4">
-                <a href="#l" target="_blank" rel="noopener">
-                    <img src="" alt="LegitScript">
-                </a>
-            </div>
-		</div> -->
-        <br>
-        <br>
-        <div class="row center-xs middle-xs">
-			<div class="col-xs-4">
+        <div class="row center-xs bottom-xs">
+			<div class="col-xs-4 first-sm">
 				<a href="/">&copy; Flatirons Recovery</a>
 			</div>
-			<div class="col-xs-4">
-                <!-- <object width="150px" type="image/svg+xml" data="">Flatirons Recovery Logo</object> -->
+			<div class="col-xs-12 col-sm-4 first-xs">
+                <div class="legit">
+                    <script src="https://static.legitscript.com/seals/7418467.js"></script>
+                </div>
 			</div>
 			<div class="col-xs-4">
 				<a href="https://arcdev.io/" rel="noopener">Arc i/o</a>
