--- a/dst/error.html
+++ b/dst/error.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Flatirons Recovery Center | Colorado Substance Abuse Treatment</title>
+    <title>Flatirons Recovery | Colorado Substance Abuse Treatment</title>
 
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="Flatirons Recovery Center is a Colorado Recovery Center that helps people through the process of healing from addiction with greater clarity of purpose and connection to community. Learn more!">
+    <meta name="description" content="Flatirons Recovery is a Colorado Recovery Center that helps people through the process of healing from addiction with greater clarity of purpose and connection to community. Learn more!">
     <meta name="keywords" content="addiction treatment, substance use, mental health disorder">
 
     <meta property="og:locale" content="en_US">
 	<meta property="og:type" content="website">
-	<meta property="og:site_name" content="Flatirons Recovery Centers">
-	<meta property="og:title" content="Flatirons Recovery Center | Colorado Substance Abuse Treatment">
-	<meta property="og:description" content="Flatirons Recovery Center is a Colorado Recovery Center that helps people through the process of healing from addiction with greater clarity of purpose and connection to community. Learn more!">
+	<meta property="og:site_name" content="Flatirons Recovery">
+	<meta property="og:title" content="Flatirons Recovery | Colorado Substance Abuse Treatment">
+	<meta property="og:description" content="Flatirons Recovery is a Colorado Recovery Center that helps people through the process of healing from addiction with greater clarity of purpose and connection to community. Learn more!">
 	<meta property="og:image" content="<!-- { "variable": "ogImage" } -->" />
 
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
@@ -242,21 +242,14 @@
 				<a href="mailto:contact@flatironsrecovery.com" data-track="click: email, click">contact@flatironsrecovery.com</a>
 			</div>
 		</div>
-		<!-- <div class="row center-xs">
-            <div class="col-xs-12 col-sm-4">
-                <a href="#l" target="_blank" rel="noopener">
-                    <img src="" alt="LegitScript">
-                </a>
-            </div>
-		</div> -->
-        <br>
-        <br>
-        <div class="row center-xs middle-xs">
-			<div class="col-xs-4">
+        <div class="row center-xs bottom-xs">
+			<div class="col-xs-4 first-sm">
 				<a href="/">&copy; Flatirons Recovery</a>
 			</div>
-			<div class="col-xs-4">
-                <!-- <object width="150px" type="image/svg+xml" data="">Flatirons Recovery Logo</object> -->
+			<div class="col-xs-12 col-sm-4 first-xs">
+                <div class="legit">
+                    <script src="https://static.legitscript.com/seals/7418467.js"></script>
+                </div>
 			</div>
 			<div class="col-xs-4">
 				<a href="https://arcdev.io/" rel="noopener">Arc i/o</a>
