--- a/dst/treatment/index.html
+++ b/dst/treatment/index.html
@@ -11,7 +11,7 @@
 
     <meta property="og:locale" content="en_US">
 	<meta property="og:type" content="website">
-	<meta property="og:site_name" content="Flatirons Recovery Centers">
+	<meta property="og:site_name" content="Flatirons Recovery">
 	<meta property="og:title" content="Drug and Alcohol Treatment | Flatirons Recovery">
 	<meta property="og:description" content="Learn about our drug and alcohol treatment program, with a timeline of what clients should expect. ">
 	<meta property="og:image" content="/treatment/blue-brook.jpg" />
@@ -157,7 +157,7 @@
         <div class="col-xs-12 col-sm-6 col-md-3">
             <div class="blue tile">
                 <h3>Therapy</h3>
-                <p>At Flatirons Recovery Center, clients will engage in a weekly, 1-hour individual therapy session in order
+                <p>At Flatirons Recovery, clients will engage in a weekly, 1-hour individual therapy session in order
                     to develop more insight into the habitual patterns that have influenced their substance use disorder.
                 </p>
                 <a href="/treatment/therapy" class="button border">Learn More</a>
@@ -174,7 +174,7 @@
         <div class="col-xs-12 col-sm-6 col-md-3">
             <div class="blue tile">
                 <h3>Intensive Outpatient</h3>
-                <p>At Flatirons Recovery Center, our IOP program meets Monday, Wednesday, and Thursday evenings from 9am -
+                <p>At Flatirons Recovery, our IOP program meets Monday, Wednesday, and Thursday evenings from 9am -
                     12pm for group therapy.</p>
                 <a href="/treatment/iop" class="button border">Learn More</a>
             </div>
@@ -191,7 +191,7 @@
     <div class="row">
         <div class="col-xs-12">
             <h3>Support Groups for Family Members</h3>
-            <p>Flatirons Recovery Center highly recommends that family members support themselves while their loved one is in treatment. The following in a small sampling of the community supports that may be appropriate and/or available in your community.</p>
+            <p>Flatirons Recovery highly recommends that family members support themselves while their loved one is in treatment. The following in a small sampling of the community supports that may be appropriate and/or available in your community.</p>
             <ul>
                 <li><a href="https://www.smartrecovery.org/family-friends-and-addiction-recovery/" target="_blank">SMART Recovery Family and Friends</a></li>
                 <li><a href="https://www.nami.org/Home" target="_blank">NAMI</a></li>
@@ -212,7 +212,7 @@
     </div>
     <div class="row center-xs">
         <div class="col-xs">
-            <h4>If you would like to reach out to a treatment professional at Flatirons Recovery Center</h4>
+            <h4>If you would like to reach out to a treatment professional at Flatirons Recovery</h4>
             <h4>call us at <a href="tel:303-578-4536" data-track="click: phone, click">303-578-4536</a></h4>
             <a class="button border" href="/contact">Contact Us</a>
         </div>
@@ -325,21 +325,14 @@
 				<a href="mailto:contact@flatironsrecovery.com" data-track="click: email, click">contact@flatironsrecovery.com</a>
 			</div>
 		</div>
-		<!-- <div class="row center-xs">
-            <div class="col-xs-12 col-sm-4">
-                <a href="#l" target="_blank" rel="noopener">
-                    <img src="" alt="LegitScript">
-                </a>
-            </div>
-		</div> -->
-        <br>
-        <br>
-        <div class="row center-xs middle-xs">
-			<div class="col-xs-4">
+        <div class="row center-xs bottom-xs">
+			<div class="col-xs-4 first-sm">
 				<a href="/">&copy; Flatirons Recovery</a>
 			</div>
-			<div class="col-xs-4">
-                <!-- <object width="150px" type="image/svg+xml" data="">Flatirons Recovery Logo</object> -->
+			<div class="col-xs-12 col-sm-4 first-xs">
+                <div class="legit">
+                    <script src="https://static.legitscript.com/seals/7418467.js"></script>
+                </div>
 			</div>
 			<div class="col-xs-4">
 				<a href="https://arcdev.io/" rel="noopener">Arc i/o</a>
