--- a/dst/treatment/therapy/index.html
+++ b/dst/treatment/therapy/index.html
@@ -11,7 +11,7 @@
 
     <meta property="og:locale" content="en_US">
 	<meta property="og:type" content="website">
-	<meta property="og:site_name" content="Flatirons Recovery Centers">
+	<meta property="og:site_name" content="Flatirons Recovery">
 	<meta property="og:title" content="Therapy | Flatirons Recovery">
 	<meta property="og:description" content="Therapy at Flatirons Recovery will help develop the ability to take appropriate action to begin the healing process and identify negative habits. Learn More.">
 	<meta property="og:image" content="/treatment/blue-brook.jpg" />
@@ -148,7 +148,7 @@
 <div class="wrap">
     <div class="row">
         <div class="col-xs">
-            <p>At Flatirons Recovery Center, clients will engage in a weekly, 1-hour individual therapy session in order to develop more insight into the habitual patterns that have influenced their substance use disorder, as well as to develop more ability to take appropriate action to begin the healing process.</p>
+            <p>At Flatirons Recovery, clients will engage in a weekly, 1-hour individual therapy session in order to develop more insight into the habitual patterns that have influenced their substance use disorder, as well as to develop more ability to take appropriate action to begin the healing process.</p>
             <p>Topics that may be addressed during individual sessions at Flatirons Recovery include:</p>
             <ul>
                 <div class="row">
@@ -170,14 +170,14 @@
         </div>
         <div class="col-xs-12">
             <h3>Family Therapy</h3>
-            <p>At Flatirons Recovery Center, clients may engage in a bi-weekly, 1-hour family sessions, in order to develop more insight into the systemic ways in which substance use disorders may be impacting their family life.</p>
+            <p>At Flatirons Recovery, clients may engage in a bi-weekly, 1-hour family sessions, in order to develop more insight into the systemic ways in which substance use disorders may be impacting their family life.</p>
             <p>These sessions will be coordinated by therapists, and typically take place beginning two weeks into client’s treatment programs.</p>
         </div>
     </div>
     
         <div class="col-xs-12">
             <h3>Group Therapy</h3>
-            <p>At Flatirons Recovery Center, clients will engage in 30-hours of group programming during PHP/Day Treatment programming, and 9-15 hours of group programming during Intensive Outpatient programming.</p>
+            <p>At Flatirons Recovery, clients will engage in 30-hours of group programming during PHP/Day Treatment programming, and 9-15 hours of group programming during Intensive Outpatient programming.</p>
             <p>Topics that may be addressed during group therapy sessions at Flatirons Recovery include:</p>
             <ul>
                 <div class="row">
@@ -207,7 +207,7 @@
     </div>
     <div class="row center-xs">
         <div class="col-xs">
-            <h4>If you would like to reach out to a treatment professional at Flatirons Recovery Center</h4>
+            <h4>If you would like to reach out to a treatment professional at Flatirons Recovery</h4>
             <h4>call us at <a href="tel:303-578-4536" data-track="click: phone, click">303-578-4536</a></h4>
             <a class="button border" href="/contact">Contact Us</a>
         </div>
@@ -319,21 +319,14 @@
 				<a href="mailto:contact@flatironsrecovery.com" data-track="click: email, click">contact@flatironsrecovery.com</a>
 			</div>
 		</div>
-		<!-- <div class="row center-xs">
-            <div class="col-xs-12 col-sm-4">
-                <a href="#l" target="_blank" rel="noopener">
-                    <img src="" alt="LegitScript">
-                </a>
-            </div>
-		</div> -->
-        <br>
-        <br>
-        <div class="row center-xs middle-xs">
-			<div class="col-xs-4">
+        <div class="row center-xs bottom-xs">
+			<div class="col-xs-4 first-sm">
 				<a href="/">&copy; Flatirons Recovery</a>
 			</div>
-			<div class="col-xs-4">
-                <!-- <object width="150px" type="image/svg+xml" data="">Flatirons Recovery Logo</object> -->
+			<div class="col-xs-12 col-sm-4 first-xs">
+                <div class="legit">
+                    <script src="https://static.legitscript.com/seals/7418467.js"></script>
+                </div>
 			</div>
 			<div class="col-xs-4">
 				<a href="https://arcdev.io/" rel="noopener">Arc i/o</a>
