subscribe footer clean up

--- a/src/layout.l.html
+++ b/src/layout.l.html
@@ -131,7 +131,7 @@
         <!-- { "layout": "*" } -->
     </main>
 
-    <div class="green">
+    <div class="yellow">
         <!-- { "partial": "/partials/subscribe.p.html" } -->
     </div>
 
