--- a/dst/mindfulness/index.html
+++ b/dst/mindfulness/index.html
@@ -174,16 +174,16 @@
 
     </main>
 
-    <div class="green">
+    <div class="yellow">
         
 <div class="wrap">
-    <div class="row center-xs">
-        <h2>Subscribe Now</h2>
-    </div>
-    <div class="row center-xs">
-        <div class="col-xs">
-            <h4>Subscribe to our newsletter for Flatirons Recovery updates and addiction treatment resources.</h4>
-            <button id="subscribe-button" class="button white">Subscribe</button>
+    <div class="row around-sm middle-sm start-sm center-xs">
+        <div class="col-xs-12 col-sm-8 col-md-7">
+            <h2>Subscribe To Our Newsletter!</h2>
+            <p>Subscribe to our newsletter for Flatirons Recovery updates and addiction treatment resources.</p>
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-3 end-sm">
+            <button id="subscribe-button" class="button blue">Click to Subscribe</button>
         </div>
     </div>
 </div>
