--- a/src/team/index.v.html
+++ b/src/team/index.v.html
@@ -22,14 +22,17 @@
         </div>
     </div>
 </div>
-
 <div class="wrap">
     <div class="row">
         <div class="col-xs">
+            <h2>Meet The Team</h2>
             <p>At Flatirons Recovery, we believe in treating addiction and co-occurring mental health disorders from the inside out. We recognize and nurture the basic goodness and sanity that is alive in each of our clients, while supporting their process of healing, in order to provide them with the opportunity to develop a more stable, confident foundation for a long-lasting life in recovery.</p>
             <p>Flatirons Recovery takes the same approach to constructing a caring, compassionate team of professionals to guide our clients through their recovery process.  We respect, value, and empower each member of our team to continue their own process of growth and healing, while living our mission to provide greater clarity of purpose, connection to community, and ability to take action to the clients we serve.</p>
             <p>Meet our amazing team!</p>
         </div>
     </div>
+</div>
+
+<div class="wrap">
     <div class="row staff"></div>
 </div>
