--- a/dst/facility/index.html
+++ b/dst/facility/index.html
@@ -164,6 +164,14 @@
 </div>
 
 <div class="wrap">
+    <div class="row">
+        <div class="col-xs-12 col-sm-9">
+            <h2>Our Location</h2>
+            <p>Located just minutes from Boulder and the majestic Flatirons, Flatirons Recovery provides a welcoming and comfortable office space for all of our clients to begin their process of healing from drug and alcohol addiction.</p>
+        </div>
+    </div>
+</div>
+<div class="wrap">
     <div class="gallery row">
         <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/facility/images/IMG_0309_v1.JPG" alt=""></div>
         <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/facility/images/IMG_0314_v1.JPG" alt=""></div>
