jpg extention fix

--- a/dst/sober-living/index.html
+++ b/dst/sober-living/index.html
@@ -200,15 +200,15 @@
         </div>
     </div>
     <div class="gallery row">
-        <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0605.JPG" alt=""></div>
-        <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0607.JPG" alt=""></div>
-        <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0608.JPG" alt=""></div>
-        <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0621.JPG" alt=""></div>
-        <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0622.JPG" alt=""></div>
-        <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0626.JPG" alt=""></div>
-        <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0631.JPG" alt=""></div>
-        <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0633.JPG" alt=""></div>
-        <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0634.JPG" alt=""></div>
+        <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0605.jpg" alt=""></div>
+        <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0607.jpg" alt=""></div>
+        <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0608.jpg" alt=""></div>
+        <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0621.jpg" alt=""></div>
+        <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0622.jpg" alt=""></div>
+        <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0626.jpg" alt=""></div>
+        <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0631.jpg" alt=""></div>
+        <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0633.jpg" alt=""></div>
+        <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0634.jpg" alt=""></div>
     </div>
 </div>
 
