--- a/dst/addiction/cocaine/index.html
+++ b/dst/addiction/cocaine/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <script>
+        (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-PKK97PW');
+    </script>
+
     <title>Cocaine Addiction Rehab | Flatirons Recovery</title>
 
     <meta charset="utf-8">
@@ -48,6 +57,10 @@
     <script src="/index.js" defer></script>
 </head>
 <body>
+
+    <noscript>
+        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PKK97PW" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    </noscript>
 
     <header>
 
@@ -310,12 +323,12 @@
 			</div>
         </div>
     </footer>
-    
+
     <button class="share" hidden>Share</button>
 
     <a class="call" href="tel:303-578-4536" data-track="click: phone, click">Call</a>
 
-    <script src="https://cdn.callrail.com/companies/637562366/f6d029256f703e62f7b0/12/swap.js"></script> 
+    <script src="https://cdn.callrail.com/companies/637562366/f6d029256f703e62f7b0/12/swap.js"></script>
 
 </body>
 </html>
