--- a/src/index.v.html
+++ b/src/index.v.html
@@ -15,8 +15,8 @@
                 <h1>Flatirons Recovery</h1>
             </div>
             <div class="col-xs-12">
-                <a class="button blue" href="tel:303-578-4536" data-track="click: phone, click">Call Us</a>
-                <a class="button blue" href="#message">Message Us</a>
+                <a class="button blue" href="/addiction">Addictions Treated</a>
+                <a class="button blue" href="#message">Sober Living</a>
             </div>
         </div>
     </div>
@@ -28,54 +28,24 @@
             <div class="row">
                 <div class="col-xs-12">
                     <h2>About Us</h2>
+                    <h3>Addiction Treatment Center based in Boulder Colorado</h3>
                     <hr>
                 </div>
 
                 <div class="col-xs-12">
                     <h3>Our Mission</h3>
-                    <p>The mission of Flatirons Recovery is to walk alongside our clients through the process of healing from addiction with greater clarity of purpose, connection to community, and ability to take right action in their lives.</p>
+                    <p>The mission of Flatirons Recovery is to walk alongside our clients through the process of healing from <a href="/addiction">drug and alcohol addiction</a> with greater clarity of purpose, connection to community, and ability to take right action in their lives.</p>
                     <h3>Why Us?</h3>
-                    <p>What differentiates Flatirons Recovery from other treatment providers is our <a href="/mindfulness">mindfulness-influenced curriculum</a>, commitment to small group sizes, and belief that all our clients are innately good, and must be treated as such. Our highly skilled, compassionate clinical staff provide outstanding care that meets clients as they are, in order to guide them through the process of healing from a wide range of substance use, and <a href="/mental-health">mental health disorders</a>.</p>
+                    <p>What differentiates Flatirons Recovery from other addiction treatment providers is our <a href="/mindfulness">mindfulness-influenced curriculum</a>, commitment to small group sizes, and belief that all our clients are innately good, and must be treated as such. Our highly skilled, compassionate clinical staff provide outstanding care that meets clients as they are, in order to guide them through the process of healing from a wide range of substance use, and <a href="/mental-health">mental health disorders</a>.</p>
                 </div>
             </div>
             <div class="row center-xs">
-                <a class="button border" href="/about">About Us</a>
+                <a class="button border" href="/about">Learn More</a>
             </div>
         </div>
     </div>
     <div class="col-xs-12 col-sm half-bg" style="background-image: url('/assets/images/wooden-fence.jpg');"></div>
 </div>
-<!--
-<div class="wrap">
-    <div class="row">
-        <div class="col-xs">
-            <h2>Our Team</h2>
-            <hr>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-xs-12 col-sm-3">
-            <img src="./team/mark_oberg.jpg" alt="">
-            <h4>Mark Oberg LPC, LAC</h4>
-            <p>Executive Director/Clinical Director</p>
-        </div>
-        <div class="col-xs-12 col-sm-3">
-            <img src="https://via.placeholder.com/600x900" alt="">
-            <h4>Name, Title</h4>
-        </div>
-        <div class="col-xs-12 col-sm-3">
-            <img src="https://via.placeholder.com/600x900" alt="">
-            <h4>Name, Title</h4>
-        </div>
-        <div class="col-xs-12 col-sm-3">
-            <img src="https://via.placeholder.com/600x900" alt="">
-            <h4>Name, Title</h4>
-        </div>
-    </div>
-    <div class="row center-xs">
-        <a class="button blue" href="/team">Our Team</a>
-    </div>
-</div> -->
 
 <div class="blue">
     <!-- { "partial": "/partials/call-to-action-1.p.html" } -->
@@ -87,7 +57,7 @@
         <div class="wrap">
             <div class="row">
                 <div class="col-xs-12">
-                    <h2>Drug and Alcohol Treatment</h2>
+                    <h2>Drug and Alcohol Addiction Treatment</h2>
                     <hr>
                 </div>
                 <div class="col-xs-12">
@@ -112,7 +82,7 @@
 
 <div class="green">
     <div class="wrap">
-        <div class="row center-xs">
+        <div class="row">
             <div class="col-xs-12">
                 <h2>Dual Diagnosis Treatment</h2>
             </div>
