cover button margin

--- a/src/index.v.html
+++ b/src/index.v.html
@@ -5,6 +5,12 @@
     "ogImage": "/assets/images/cover.jpg"
 } -->
 
+<style>
+    .gradient .button {
+        margin: 0.2rem;
+    }
+</style>
+
 <div class="cover">
     <div class="gradient">
         <div class="row center-xs">
