--- a/dst/treatment/modalities/index.html
+++ b/dst/treatment/modalities/index.html
@@ -197,10 +197,13 @@
     </div>
     <div class="row center-xs">
         <div class="col-xs">
-            <h4>If you would like to reach out to a treatment professional at Flatirons Recovery</h4>
+            <h4>If you would like to reach out to a substance abuse treatment professional at Flatirons Recovery</h4>
             <h4>call us at <a href="tel:303-578-4536" data-track="click: phone, click">303-578-4536</a></h4>
-            <a class="button border" href="/contact">Contact Us</a>
         </div>
+    </div>
+    <div class="row center-xs">
+        <a class="button white" href="/contact">Contact Us</a>
+        <a class="button white" href="/admission">Admission Process</a>
     </div>
 </div>
 
