--- a/dst/index.html
+++ b/dst/index.html
@@ -161,7 +161,7 @@
             </div>
             <div class="col-xs-12">
                 <a class="button blue" href="/addiction">Addictions Treated</a>
-                <a class="button blue" href="#message">Sober Living</a>
+                <a class="button blue" href="/sober-living">Sober Living</a>
             </div>
         </div>
     </div>
