backlink to new article

--- a/src/index.v.html
+++ b/src/index.v.html
@@ -42,7 +42,7 @@
                     <h3>Our Mission</h3>
                     <p>The mission of Flatirons Recovery is to walk alongside our clients through the process of healing from <a href="/addiction">drug and alcohol addiction</a> with greater clarity of purpose, connection to community, and ability to take right action in their lives.</p>
                     <h3>Why Us?</h3>
-                    <p>What differentiates Flatirons Recovery from other addiction treatment providers is our <a href="/mindfulness">mindfulness-influenced curriculum</a>, commitment to small group sizes, and belief that all our clients are innately good, and must be treated as such. Our highly skilled, compassionate clinical staff provide outstanding care that meets clients as they are, in order to guide them through the process of healing from a wide range of substance use, and <a href="/mental-health">mental health disorders</a>.</p>
+                    <p>What differentiates Flatirons Recovery from other addiction treatment providers is our <a href="/mindfulness">mindfulness-influenced curriculum</a>, commitment to small group sizes, and belief that all our clients are <a href="/blog/we-arent-here-to-fix-you-because-youre-not-broken/">innately good</a>, and must be treated as such. Our highly skilled, compassionate clinical staff provide outstanding care that meets clients as they are, in order to guide them through the process of healing from a wide range of substance use, and <a href="/mental-health">mental health disorders</a>.</p>
                 </div>
             </div>
             <div class="row center-xs">
